@@ -12,6 +12,8 @@
 #include "multiscreen-stuff.h"
 #include "panel-typebuiltins.h"
 
+#undef BORDER_WIDGET_DEBUG
+
 extern GlobalConfig global_config;
 
 static void border_pos_class_init (BorderPosClass *klass);
@@ -163,6 +165,32 @@ border_pos_get_hide_orient (BasePWidget *basep)
 	return ORIENT_LEFT;
 }
 
+#ifdef BORDER_WIDGET_DEBUG
+static void
+border_pos_debug_print_edge (BorderEdge edge)
+{
+	g_print ("BorderEdge = ");
+
+	switch (edge) {
+	case BORDER_TOP:
+		g_print ("(top)\n");
+		break;
+	case BORDER_RIGHT:
+		g_print ("(right)\n");
+		break;
+	case BORDER_BOTTOM:
+		g_print ("(bottom)\n");
+		break;
+	case BORDER_LEFT:
+		g_print ("(left)\n");
+		break;
+	default:
+		g_assert_not_reached ();
+		break;
+	}
+}
+#endif /* BORDER_WIDGET_DEBUG */
+
 static void
 border_pos_get_menu_pos (BasePWidget *basep,
 			 GtkWidget *widget,
@@ -171,6 +199,11 @@ border_pos_get_menu_pos (BasePWidget *basep,
 			 int wx, int wy,
 			 int ww, int wh)
 {
+
+#ifdef BORDER_WIDGET_DEBUG
+	border_pos_debug_print_edge (BORDER_POS(basep->pos)->edge);
+#endif /* BORDER_WIDGET_DEBUG */
+
 	switch (BORDER_POS(basep->pos)->edge) {
 	case BORDER_TOP:
 		*x += wx;
@@ -187,6 +220,9 @@ border_pos_get_menu_pos (BasePWidget *basep,
 	case BORDER_LEFT:
 		*x = wx + ww;
 		*y += wy;
+		break;
+	default:
+		g_assert_not_reached ();
 		break;
 	}
 }
