@@ -1,3 +1,13 @@
+2001-11-09  Mark McLoughlin  <mark@skynet.ie>
+
+	* applet.c: tidy up popup menu handling.
+
+	* applet.h: (show_applet_menu): privatise.
+
+	* basep-widget.c, border-widget.c, extern.c, menu-util.c:
+	
+	* menu.c: (show_item_menu_b_cb): kill unused.
+
 2001-11-08  Glynn Foster  <glynn.foster@sun.com>
 
 	* applet.c, basep-widget.c, button-widget.c,
